MakeResDll/Changes.txt
Add new items to top

2006-08-27 Kimmo
 PATCH: [ 1547212 ] Fix MakeResDll project
  MakeResDll: MakeResDll.dsp

2006-05-07 Kimmo
 PATCH: [ 1446649 ] Fix MakeResDll ui
  Submitted by Perry
  MakeResDll: MakeResDll.cpp StdAfx.h VsVersionDlg.cpp VsVersionDlg.h
 Update icon to WinMerge's current icon
  MakeResDll: Merge.ico

2006-03-08 Perry
 Update MakeResDll readme with current information (MSVC.Net 2003 works
  now), and better explanation of how to pick a specific version.
  MakeResDll: readme.txt
 PATCH: [ 1443391 ] Update MakeResDll for VS.NET 2005
  MakeResDll: MakeResDll.cpp MakeResDll.dsp MakeResDll.rc
   StdAfx.cpp StdAfx.h readme.txt resource.h
  New MakeResDll: Merge.ico VsVersionDlg.cpp VsVersionDlg.h
 Bump MakeResDll version from 1.0.6.0 to 1.0.7.0.
  MakeResDll: MakeResDll.rc

2006-03-04 Perry
 PATCH: [ 1442125 ] Improvements for MakeResDll parsing
 Bump version from 1.0.2.0 to 1.0.3.0.
  MakeResDll: MakeResDll.cpp MakeResDll.rc resource.h
  Src\Common: RegKey.cpp RegKey.h
 PATCH: [ 1442134 ] MakeResDll: check that RC file exists
 Bump version from 1.0.3.0 to 1.0.4.0.
  MakeResDll: MakeResDll.cpp MakeResDll.rc resource.h
 PATCH: [ 1442238 ] Fix MakeResDll to work with VS.NET 2003
 Bump version from 1.0.4.0 to 1.0.5.0.
  MakeResDll: MakeResDll.cpp MakeResDll.rc
 PATCH: [ 1442791 ] Update MakeResDll project
 Add Changes.txt to project.
 Bump MakeResDll version from 1.0.5.0 to 1.0.6.0.
 Change version copyright from "2003" to "2003-2006"
  MakeResDll: MakeResDll.dsp MakeResDll.rc

2006-03-03 Perry
 PATCH: [ 1442699 ] New Changes.txt file for MakeResDll
 Add Changes.txt change log (this file).
  MakeResDll: new Changes.txt
 PATCH: [ 1424636 ] New BuildOneLanguage.vbs & fix MakeResDll exit
  MakeResDll: MakeResDll.cpp StdAfx.h
  Src\Languages: BuildDll.bat BuildOneLanguage.vbs

2004-02-20 Perry
 Add GetClipTcharTextFormat (needed by coretools now) to StdAfx.*
  MakeResDll: StdAfx.cpp StdAfx.h